--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
         compose_compiler_version = '1.4.0'
         room_version = '2.5.0'
         nav_version = '2.5.3'
+        lifecycle_version = '2.6.1'
+        retrofit2_version = '2.9.0'
     }
 }
 plugins {
