--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,14 @@ buildscript {
         lifecycle_version = '2.6.1'
         retrofit2_version = '2.9.0'
     }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43.2'
+    }
 }
 plugins {
-    id 'com.android.application' version '7.4.0' apply false
-    id 'com.android.library' version '7.4.0' apply false
+    id 'com.android.application' version '8.0.1' apply false
+    id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id("com.google.dagger.hilt.android") version "2.44" apply false
 }
