--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+
     //datastore
     implementation("androidx.datastore:datastore-preferences:1.0.0")
 
@@ -94,6 +97,10 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    // Permissions
+    implementation "com.google.accompanist:accompanist-permissions:0.30.1"
+
 }
 
 // Allow references to generated code
