--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id("org.jetbrains.kotlin.plugin.serialization") version "1.8.21"
     id("com.google.dagger.hilt.android")
     id("kotlin-kapt")
+    id("com.google.gms.google-services")
 }
 
 android {
@@ -101,6 +102,9 @@ dependencies {
     // Permissions
     implementation "com.google.accompanist:accompanist-permissions:0.30.1"
 
+    // Firebase for phone authentication
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
 
 // Allow references to generated code
