--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,8 @@ dependencies {
 
     implementation 'com.google.accompanist:accompanist-pager:0.22.0-rc'
 
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+
 
 }
 
