--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,7 +109,7 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-pager:0.22.0-rc'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-
+    implementation 'com.google.android.material:material:1.9.0'
 
 }
 
