--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,11 +107,12 @@ dependencies {
     implementation platform("com.google.firebase:firebase-bom:32.0.0")
     implementation 'com.google.firebase:firebase-auth-ktx'
 
-    implementation 'com.google.accompanist:accompanist-pager:0.22.0-rc'
-
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
 
+    // tab layout
+    implementation "com.google.accompanist:accompanist-pager:0.23.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.23.0"
 }
 
 // Allow references to generated code
