--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,10 +109,10 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
-
     // tab layout
     implementation "com.google.accompanist:accompanist-pager:0.23.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.23.0"
+    implementation 'com.google.code.gson:gson:2.8.x'
 }
 
 // Allow references to generated code
