--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id("com.google.dagger.hilt.android")
     id("kotlin-kapt")
     id("com.google.gms.google-services")
+//    id("androidx.navigation.safeargs.kotlin")
 }
 
 android {
@@ -72,14 +73,11 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
     implementation "androidx.navigation:navigation-compose:$nav_version"
-
     implementation 'com.google.android.gms:play-services-location:21.0.1'
-
-
     //datastore
     implementation("androidx.datastore:datastore-preferences:1.0.0")
-
     // Room1
     implementation "androidx.room:room-runtime:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
@@ -99,10 +97,8 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-
     // Permissions
     implementation "com.google.accompanist:accompanist-permissions:0.30.1"
-
     // Firebase for phone authentication
     implementation platform("com.google.firebase:firebase-bom:32.0.0")
     implementation 'com.google.firebase:firebase-auth-ktx'
@@ -120,6 +116,7 @@ dependencies {
     implementation("io.ktor:ktor-client-okhttp:2.0.1")
     implementation("io.ktor:ktor-client-android:2.0.1")
     implementation("io.ktor:ktor-client-cio:2.0.1")
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 // Allow references to generated code
